tests/NormalTests/paczka1/fuzzy1/89968532.err
Error in line 4: B4IH A374 96,90
Error in line 6: IcpIRHrvEY A374 11,9
Error in line 17: JCzWXKHX A891 53,2
Error in line 14: MYLlB0J36p A891 75,2
Error in line 33: JCzWXKHX A374 51,1
